[gd_scene load_steps=19 format=3 uid="uid://d2nv01sfn3ipv"]

[ext_resource type="Texture2D" uid="uid://bfdavm3spuc7a" path="res://assets/sprites/difficulty_menu/ui_difficulty_bottom.png" id="1_888jj"]
[ext_resource type="Script" path="res://bullet_hell/levels/difficulty_select/difficulty_select.gd" id="1_ifc6c"]
[ext_resource type="Texture2D" uid="uid://baixf1kdeq0dw" path="res://assets/sprites/difficulty_menu/ui_difficulty_top.png" id="1_tiotb"]
[ext_resource type="Texture2D" uid="uid://dlgmkqwphc7xg" path="res://assets/sprites/difficulty_menu/ui_difficulty_top_click.png" id="2_jbxss"]
[ext_resource type="Texture2D" uid="uid://bxbi7xd0rextk" path="res://assets/sprites/difficulty_menu/ui_difficulty_bottom_click.png" id="2_qrtfr"]
[ext_resource type="Texture2D" uid="uid://ckpj7xaekf8un" path="res://assets/sprites/difficulty_menu/ui_difficulty_bottom_hover.png" id="3_3hdwm"]
[ext_resource type="Texture2D" uid="uid://lemtsq4ivlb0" path="res://assets/sprites/difficulty_menu/ui_difficulty_top_hover.png" id="3_i5vq5"]
[ext_resource type="Texture2D" uid="uid://304pyswfo777" path="res://assets/sprites/difficulty_menu/ui_difficulty_top_focus.png" id="5_y2ya6"]
[ext_resource type="AudioStream" uid="uid://bw8su1gy6f3tn" path="res://assets/audio/mouse_click_v1.mp3" id="8_ayu1k"]
[ext_resource type="Texture2D" uid="uid://b87xx7p43jrat" path="res://assets/sprites/difficulty_menu/ui_difficulty_bottom_focus.png" id="9_676c3"]
[ext_resource type="AudioStream" uid="uid://t0qngodb46v4" path="res://assets/audio/mouse_hover_v1.mp3" id="9_j50l1"]
[ext_resource type="AudioStream" uid="uid://fk20nmoeualt" path="res://assets/audio/impact_extra_v1.mp3" id="10_nqhtt"]
[ext_resource type="Script" path="res://bullet_hell/display/button_audio_player.gd" id="11_yt707"]
[ext_resource type="PackedScene" uid="uid://jbsk5np48sqp" path="res://bullet_hell/display/start_transition_to_dialogue.tscn" id="14_ickwx"]

[sub_resource type="Animation" id="Animation_muvpx"]
resource_name = "click"
length = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_ayu1k")
}],
"times": PackedFloat32Array(-0.04)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}

[sub_resource type="Animation" id="Animation_eev4r"]
resource_name = "hover"
length = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_j50l1")
}],
"times": PackedFloat32Array(-0.1)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [14.0]
}

[sub_resource type="Animation" id="Animation_ru2mo"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_nqhtt")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t75iw"]
_data = {
"click": SubResource("Animation_muvpx"),
"hover": SubResource("Animation_eev4r"),
"spawn": SubResource("Animation_ru2mo")
}

[node name="difficulty_select" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ifc6c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Difficult" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 74.0
offset_top = 95.0
offset_right = 8943.0
offset_bottom = 2471.0
scale = Vector2(0.2, 0.2)
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../Normal")
texture_normal = ExtResource("1_tiotb")
texture_pressed = ExtResource("2_jbxss")
texture_hover = ExtResource("3_i5vq5")
texture_focused = ExtResource("5_y2ya6")

[node name="Normal" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 556.0
offset_right = 7608.0
offset_bottom = 2657.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_888jj")
texture_pressed = ExtResource("2_qrtfr")
texture_hover = ExtResource("3_3hdwm")
texture_focused = ExtResource("9_676c3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t75iw")
}
script = ExtResource("11_yt707")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 6.0

[node name="StartTransition" parent="." instance=ExtResource("14_ickwx")]
visible = false
layout_mode = 1

[connection signal="focus_entered" from="Difficult" to="AnimationPlayer" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Difficult" to="AnimationPlayer" method="_on_mouse_entered"]
[connection signal="pressed" from="Difficult" to="." method="_on_difficult_pressed"]
[connection signal="pressed" from="Difficult" to="AnimationPlayer" method="_on_pressed"]
[connection signal="focus_entered" from="Normal" to="AnimationPlayer" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Normal" to="AnimationPlayer" method="_on_mouse_entered"]
[connection signal="pressed" from="Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="Normal" to="AnimationPlayer" method="_on_pressed"]
